deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-finizer
  namespace: k8s-finizer
spec:
  selector:
    app: k8s-finizer
  ports:
    - name: http
      port: 80
      targetPort: http
